# jkh-platform

./: Dockerfile  manage.py  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt
backend/: settings.py  urls.py
core/: admin.py  excel_parser.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_building_debtor.py  0003_payment.py  0004_excelupload.py  0005_alter_user_managers_user_full_name_alter_user_email_and_more.py  0006_remove_building_description_remove_building_lat_and_more.py  0007_remove_user_username_building_created_at_and_more.py  0008_passwordresettoken.py  0009_building_building_type_building_number_of_apartments_and_more.py  0010_debtor_debt_start_date_debtor_initial_term_days.py  0011_building_latitude_building_longitude_and_more.py  0012_building_total_square_debtor_apartment_area.py  0013_alter_building_total_square.py  0014_alter_debtor_apartment_area.py  0015_reporthistory.py  0016_debtor_apart_num.py  0017_house_street_remove_building_address_and_more.py
core/models/: __init__.py  building.py  debtor.py  excel_upload.py  house.py  password_reset.py  payment.py  report_history.py  street.py  user.py
core/reports/: utils.py
env/: pyvenv.cfg
frontend/: package-lock.json  package.json
frontend/src/: .env  App.js  App.jsx
media/reports/: г.Павлодар_ул._Академика_Бектурова_д._71_2025-05-14_22-32.xlsx  (+12 more)
uploads/: pes_to_srv1061_20250211_093516_04-2.xlsx  pes_to_srv1061_20250211_093516_04-21.xlsx  pes_to_srv1061_20250211_093516_04-21_8ogtXXQ.xlsx
(+18 files in other folders)
