[project]
name = "jkh-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "sq1der",email = "amanbelgibay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "dj-database-url==2.3.0",
    "Django==5.2",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "djangorestframework_simplejwt==5.5.0",
    "et_xmlfile==2.0.0",
    "numpy==2.2.5",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "PyJWT==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "rest-framework-simplejwt==0.0.2",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "typing_extensions==4.13.2",
    "tzdata==2025.2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
